@@ -26,9 +26,9 @@ B&auml;renreiter
 LilyPond 1.4
 <p>
 
-The LilyPond output is certainly readable, and for many people it would be
-acceptable. However, close comparison with a hand-engraved score
-showed a lot of errors in the details:
+The LilyPond output is certainly readable, and for many people it
+would be acceptable. However, close comparison with a hand-engraved
+score showed a lot of errors in the formatting details:
 
 <p align=center>
 <img src=@IMAGES@lily14-sarabande-correct.png>
@@ -44,7 +44,9 @@ too light.
 
 <li> The spacing was irregular: some measures were too tight, other
 too wide.
+
 </ul>
+(And there were missing notes in the original version for LilyPond)
 
 <p>
 
