@@ -1,3 +1,10 @@
+2003-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/index.html: add magical "notation" word.
+
+	* site/about/automated-engraving/benchmarking.html: add note about
+	missing notes.
+
 2003-08-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/devel/packaging.html: Add pfaedit urls.
